word-wrap nos dominios pra evitar bugs de renderização

--- a/view/basic-v0.1.0/style.css
+++ b/view/basic-v0.1.0/style.css
@@ -48,6 +48,9 @@ h1 a:hover{
 	border-width: 100%;
 	text-decoration:underline;
 }
+h3,li{
+	word-break: break-all;
+}
 label{
 	font-weight:bold;
 }
